[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemy_animation/skeleton_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://assets/enemy_animation/character_frames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/ui/progress_bars/life_progress.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/progress_bars/life_over.png" type="Texture" id=4]
[ext_resource path="res://gui/Fight screen/FightScene.gd" type="Script" id=11]

[node name="FightScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 720.0
margin_bottom = 1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_up" type="Button" parent="."]
margin_left = 298.0
margin_top = 930.0
margin_right = 558.0
margin_bottom = 990.0
rect_rotation = -16.0
text = "up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_mid" type="Button" parent="."]
margin_left = 316.0
margin_top = 1000.0
margin_right = 576.0
margin_bottom = 1060.0
rect_rotation = 0.094179
text = "mid"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_down" type="Button" parent="."]
margin_left = 316.0
margin_top = 1070.0
margin_right = 576.0
margin_bottom = 1130.0
rect_rotation = 16.0
text = "down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="AnimatedSprite" parent="."]
position = Vector2( 180, 330 )
scale = Vector2( 7, 7 )
frames = ExtResource( 2 )
animation = "idle"
frame = 3
playing = true

[node name="Enemy" type="AnimatedSprite" parent="."]
position = Vector2( 560, 330 )
scale = Vector2( 7, 7 )
frames = ExtResource( 1 )
animation = "idle"
frame = 9
playing = true
flip_h = true

[node name="character_health" type="TextureProgress" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 60.0
min_value = 1.0
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_health" type="TextureProgress" parent="."]
margin_left = 410.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 60.0
min_value = 1.0
value = 78.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="Button" type="Button" parent="."]
margin_left = 57.4
margin_top = 961.2
margin_right = 256.4
margin_bottom = 1095.2

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
